# MemSimX

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  README.md
include/allocator/: allocator_interface.h  buddy_allocator.h  memory_block.h  standard_allocator.h
include/cache/: cache_hierarchy.h  cache_level.h  cache_line.h
include/cli/: cli.h  command_parser.h
include/common/: result.h  types.h
include/manager/: memory_manager.h
include/memory/: physical_memory.h
include/system/: memory_system.h
include/virtual_memory/: page_table_entry.h  virtual_memory.h
src/: CMakeLists.txt  main.cpp
src/allocator/: buddy_allocator.cpp  standard_allocator.cpp
src/cache/: cache_hierarchy.cpp  cache_level.cpp
src/cli/: cli.cpp  command_parser.cpp
src/manager/: memory_manager.cpp
src/memory/: physical_memory.cpp
src/system/: memory_system.cpp
src/virtual_memory/: virtual_memory.cpp
test_artifacts/: ALLOCATION_WORKLOADS.md  EXPECTED_OUTPUTS.md  LOGS_UPDATED.md  README.md  TEST_SCRIPTS.md  allocation_log.txt  cache_access_log.txt  integrated_system_log.txt  run_all_workloads.sh  vm_access_log.txt
test_artifacts/input_workloads/: demo_workflow_1_allocation.txt  demo_workflow_2_buddy.txt  demo_workflow_3_cache.txt  demo_workflow_4_vm.txt  demo_workflow_5_integrated.txt  demo_workflow_6_coalescing.txt  demo_workflow_7_page_faults.txt
test_artifacts/output_logs/: demo_workflow_1_allocation.txt  demo_workflow_2_buddy.txt  demo_workflow_3_cache.txt  demo_workflow_4_vm.txt  demo_workflow_5_integrated.txt  demo_workflow_6_coalescing.txt  demo_workflow_7_page_faults.txt
tests/: CMakeLists.txt
tests/integration/: test_cache_integration.cpp  test_full_system.cpp
tests/unit/: test_buddy_allocator.cpp  test_cache_level.cpp  test_physical_memory.cpp  test_standard_allocator.cpp  test_virtual_memory.cpp
tests/workloads/: demo_commands.txt
